--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -18,10 +18,10 @@
   }
   gap: 16px;
 }
-.imageContainer{
-  display: flex;
-  flex-wrap: wrap;
-  gap: 8px;
+.loading{
   width: 100%;
-  height: 200px;
+  height: 100dvh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
