--- a/src/components/CategoryTag/CategoryTag.module.scss
+++ b/src/components/CategoryTag/CategoryTag.module.scss
@@ -1,4 +1,4 @@
-@import '../../../constants.module.scss';
+@import '../../constants.module.scss';
 .tag{
     background-color: $purple;
     border-radius: 10px;
